--- a/UI/blackjack/playwindow.ui
+++ b/UI/blackjack/playwindow.ui
@@ -60,7 +60,7 @@ border-width: 2px;</string>
       </rect>
      </property>
      <property name="text">
-      <string>Label</string>
+      <string>Dealer</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
@@ -510,6 +510,9 @@ border-radius: 15px;</string>
           <layout class="QHBoxLayout" name="horizontalLayout_16">
            <item>
             <widget class="QPushButton" name="coin_10">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="minimumSize">
               <size>
                <width>25</width>
@@ -547,6 +550,9 @@ background-color: rgb(228, 192, 0);</string>
            </item>
            <item>
             <widget class="QPushButton" name="coin_25">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="minimumSize">
               <size>
                <width>25</width>
@@ -572,6 +578,9 @@ background-color: rgb(0, 194, 8);</string>
            </item>
            <item>
             <widget class="QPushButton" name="coin_50">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
              <property name="minimumSize">
               <size>
                <width>25</width>
